kube_deploy/Prod/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-service-app-prod
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: application-service-app-prod
    spec:
      serviceAccountName: irsaappservice
      containers:
        - name: application-service
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3110
  selector:
    matchLabels:
      app: application-service-app-prod
