kube_deploy/Prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: application-service-prod
  labels:
    app: application-service-app-prod
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3110
  selector:
    app: application-service-app-prod
